--- a/src/pages/css/home.css
+++ b/src/pages/css/home.css
@@ -14,4 +14,27 @@
     border-radius: 50%;
 }
 
+.jugadorUsuario {
+    animation: opacidad 4s 1 forwards;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 25em;
+    color: aliceblue;
+    border-radius: 6px;
+    background-color: transparent;
+    padding: 1em 0;
+    border: 2px solid transparent;
+    border-radius: 30px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 1),
+      -1px -1px 6px rgba(255, 255, 255, 0.4), inset 3px 3px 10px rgba(0, 0, 0, 1),
+      inset -1px -1px 6px rgba(255, 255, 255, 0.4);
+  }
+
+  .jugadores{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
