--- a/src/pages/css/home.css
+++ b/src/pages/css/home.css
@@ -25,7 +25,6 @@
     color: aliceblue;
     border-radius: 6px;
     background-color: transparent;
-    padding: 1em 0;
     border: 2px solid transparent;
     border-radius: 30px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 1),
@@ -36,5 +35,54 @@
   .jugadores{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 3rem;
+  }
+
+  .contenedorJugadores{
+    animation: opacidad 4s 1 forwards;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+    color: aliceblue;
+    border-radius: 6px;
+    background-color: transparent;
+    padding: 1em 3em;
+    border: 2px solid transparent;
+    border-radius: 30px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 1),
+      -1px -1px 6px rgba(255, 255, 255, 0.4), inset 3px 3px 10px rgba(0, 0, 0, 1),
+      inset -1px -1px 6px rgba(255, 255, 255, 0.4);
+  }
+
+  @media (max-width: 992px) {
+    .orden{
+      display: flex;
+      flex-direction: column;
+      padding-top: 200px;
+    }
+
+    .jugadores {
+      display: grid;
+      grid-template-columns:1fr 1fr;
+      gap: 3rem;
+    }
+  
+  }
+  
+  @media (max-width: 576px) {
+    .orden{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-top: 200px;
+    }
+    .jugadores {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
