--- a/src/components/css/navegation.css
+++ b/src/components/css/navegation.css
@@ -1,17 +1,22 @@
+
 .logoNav{
   font-family: 'Averus', sans-serif;
-  text-shadow: rgb(133, 31, 31) 1px 0 10px;                                      
+  font-size: 2em;
+  text-shadow: rgb(0, 0, 0) 1px 0 10px;
+}
+
+.logoNav:hover{
+  color: aliceblue;
 }
 
 .activo {
-    color: rgb(237, 245, 6);
+    color: rgb(0, 220, 235);
     font-weight: bold;
     text-decoration: none;
-    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+    text-shadow: rgba(0, 238, 186, 0.911) 1px 0 10px;
   }
-  
   .activo:hover{
-    color: rgb(237, 245, 6);
+    color: rgb(0, 220, 235);
   }
   
   .deco {
@@ -21,42 +26,19 @@
   }
   
   .deco:hover{
-    color: aliceblue;
+    color: rgb(0, 220, 235);
     text-shadow: rgb(255, 255, 255) 1px 0 10px;
   }
   
   .inactivo {
-    color: aliceblue;
+     color:aliceblue;
     text-decoration: none;
   }
   
   .inactivo:hover{
-    color: aliceblue;
+    color: rgb(0, 220, 235);
   }
 
-  .boton-cerrar {
-    padding: 1em 2em;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-  }
-  
   .boton-cerrar:hover {
-    background-color: #a40880bc;
-    box-shadow: 0px 15px 20px rgba(108, 4, 101, 0.661);
-    color: #fff;
-    transform: translateY(-7px);
-  }
-  
-  .boton-cerrar:active {
-    transform: translateY(-1px);
+    color: brown;
   }
