--- a/src/components/css/cards.css
+++ b/src/components/css/cards.css
@@ -1,3 +1,5 @@
+
+
 .contornoCard {
     padding: 5px;
     background: #00000025;
@@ -6,10 +8,10 @@
     place-content: center;
     place-items: center;
     overflow: hidden;
-    border-radius: 20px;
-    box-shadow: 0px 0px 70px -7px rgba(182,69,241,0.43);
--webkit-box-shadow: 0px 0px 70px -7px rgba(182,69,241,0.43);
--moz-box-shadow: 0px 0px 70px -7px rgba(182,69,241,0.43);
+    border-radius: 5px;
+    box-shadow: 0px 0px 70px -7px rgba(186, 58, 254, 0.531);
+    -webkit-box-shadow: 0px 0px 70px -7px rgba(186, 58, 254, 0.531);
+    -moz-box-shadow: 0px 0px 70px -7px rgba(186, 58, 254, 0.531);
   }
 
   .contornoCard::before {
@@ -36,6 +38,18 @@
     width: 15em;
   }
 
+  .imagenCard:hover{
+    animation: zoom 2s 1 forwards;
+  }
+  
+  @keyframes zoom {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(1.1);
+    }
+  }
   
 
   
