--- a/src/pages/css/registro.css
+++ b/src/pages/css/registro.css
@@ -75,7 +75,7 @@ option {
     flex-direction: column;
   }
   .contenedor-registro {
-    margin: 1em 1em;
+    margin: 8em 1em;
   }
 
 }
@@ -86,7 +86,7 @@ option {
     flex-direction: column;
   }
   .contenedor-registro {
-    margin: 1em 1em;
+    margin: 8em 1em;
   }
 }
 
@@ -95,4 +95,5 @@ option {
   background-color: crimson;
   padding: 3px;
   margin-top: 2px;
+  border-radius: 5px;
 }
